fix memory leak (openjfx issue) improve object and eventhandler cleanup logic