@@ -109,16 +109,16 @@ dependencies {
     implementation('org.jfxtras:jmetro:11.6.15') {
         exclude group: 'org.openjfx'
     }
-    implementation("org.openjfx:javafx-base:17.0.0.1:${platform}")
-    implementation("org.openjfx:javafx-controls:17.0.0.1:${platform}")
-    implementation("org.openjfx:javafx-fxml:17.0.0.1:${platform}")
-    implementation("org.openjfx:javafx-graphics:17.0.0.1:${platform}")
-    implementation("org.openjfx:javafx-media:17.0.0.1:${platform}")
-    implementation('org.controlsfx:controlsfx:11.1.0')
+    implementation("org.openjfx:javafx-base:17.0.2:${platform}")
+    implementation("org.openjfx:javafx-controls:17.0.2:${platform}")
+    implementation("org.openjfx:javafx-fxml:17.0.2:${platform}")
+    implementation("org.openjfx:javafx-graphics:17.0.2:${platform}")
+    implementation("org.openjfx:javafx-media:17.0.2:${platform}")
+    implementation('org.controlsfx:controlsfx:11.1.1')
 
 //    testImplementation 'de.saxsys:jfx-testrunner:1.2'
     testImplementation 'de.saxsys:mvvmfx-testing-utils:1.8.0'
-    testImplementation("org.openjfx:javafx-swing:17.0.0.1:${platform}")
+    testImplementation("org.openjfx:javafx-swing:17.0.2:${platform}")
 
 }
 jpackage {
@@ -128,6 +128,7 @@ jpackage {
 }
 run {
     jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls', '--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming']
+    //, '-Xmx1G', '-XX:+UseCompressedOops', '-XX:+PrintGCDetails', '-XX:SoftRefLRUPolicyMSPerMB=100'
 }
 test {
     useJUnitPlatform {
